laravel/resources/assets/less/app.less
/* ... */
.main-content {
    background-color: @bg_page;
    padding: 20px;
}
.main-content .row {
    margin-bottom: 10px;
    div[class^='col-'] {
        margin-bottom: 10px;
    }
}
.filter-caret {
    height: 7px;
    position: absolute;
    right: 20px;
    top: 30px;
    width: 11px;
}
#visits-blocks-widget,
#members-blocks-widget {
    .filter-caret {
        top: 15px;
    }
}
/******************************/
/******** WELCOME TEXT ********/
/******************************/
#welcome-text {
    font-size: 160%;
    font-weight: 500;
    @media (max-width: 767px) {
        font-size: 130%;
    }
    @media (max-width: 480px) {
        display: none;
    }
    .user-name {
        color: @gold;
    }
    .time-date {
        float: right;
        .time-period {
            color: @mediumgrey;
            padding-right: 30px;
        }
        .month-year {
            color: @mediumgrey;
        }
    }
}
.filter {
    background-color: @white;
}
.time-date-modifier {
    color: @mediumgrey;
}
/****************************************/
/******** TOP VISITS STAT BLOCKS ********/
/****************************************/
.stat-block {
    background-color: @aqua;
    color: @white;
    height: 140px;
    overflow: hidden;
    padding: 10px;
    text-align: center;
    text-transform: uppercase;
    .label {
        font-size: 1.2vw;   /* 160% */
        font-weight: 400;
        padding: 0;
        white-space: normal;
        @media (max-width: 1199px) {
            font-size: 160%;
        }
        @media (max-width: 767px) {
            font-size: 120%;
        }
    }
    .change {
        font-size: 160%;
        font-weight: 400;
        left: 50%;
        padding: 0;
        position: absolute;
        bottom: 10px;
        transform: translateX(-50%);
        white-space: nowrap;
        .down {
            margin: 0 5px 0 0;
            opacity: 0.5;
            position: relative;
            transform: rotate(180deg);
            path {
                fill: @white;
            }
        }
        .up {
            margin: 0 5px 0 0;
            opacity: 0.5;
            position: relative;
            path {
                fill: @white;
            }
        }
    }
    .stat {
        font-size: 2.5vw;
        font-weight: 500;
        left: 50%;
        position: absolute;
        top: 46%;
        transform: translate(-50%,-50%);
        @media (max-width: 1199px) {
            font-size: 317%;
        }
        @media (max-width: 767px) {
            font-size: 6.5vw;
        }
    }
}
.clear {
    clear: both;
}
#visits-total .stat-block {background-color: @cobalt;}
#visits-ga .stat-block {background-color: @teal;}
#visits-groups .stat-block {background-color: @darkgrey;}
#visits-members .stat-block {background-color: @darkpurple1;}
#visits-nonmembers .stat-block {background-color: @gold;}
#sales-gate .stat-block {background-color: @aqua;}
#visits-blocks-widget,
#members-blocks-widget {
    .form-control {
        appearance: none;
            -moz-appearance: none;
            -webkit-appearance: none;
        border: none;
        border-radius: 0;
        box-shadow: none;
    }
}
/******************************************************/
/******** SALES, MEMBERSHIPS, AND REVENUE ROWS ********/
/******************************************************/
#total-sales-goals,
#earned-revenue-channels,
#total-membership-goals,
#membership,
#revenue,
#earned-revenue {
    height: 234px;
    position: relative;
    h2 {
        float: left;
        font-size: 150%;
        margin: 10px 0 0 0;
        text-transform: uppercase;
    }
    .form-control {
        appearance: none;
            -moz-appearance: none;
            -webkit-appearance: none;
        background-color: @lightgrey;
        border: none;
        border-radius: 0;
        box-shadow: none;
        float: right;
        transition: none;
        width: 180px;

    }
}
#earned-revenue {
    overflow: scroll;
}
.arrow-connector-right:after {
    border: solid transparent;
    border-color: rgba(21, 45, 65, 0);
    border-left-color: @white;
    border-width: 16px;
    bottom: 50%;
    content: " ";
    height: 0;
    pointer-events: none;
    position: absolute;
    right: -24px;
    transform: translateY(50%);
    width: 0;    
}
.arrow-connector-left:after {
    border: solid transparent;
    border-color: rgba(21, 45, 65, 0);
    border-right-color: @white;
    border-width: 16px;
    bottom: 50%;
    content: " ";
    height: 0;
    pointer-events: none;
    position: absolute;
    left: -24px;
    transform: translateY(50%);
    width: 0;    
}
.report-actions {
    li {
        float: left;
    }
}
#total-sales-goals,
#total-membership-goals {
    .goal {
        float: left;
        margin: 30px 0 40px 0;
        text-transform: uppercase;
    }
    .goalAmount {
        font-weight: 800;
        margin-right: 20px;
    }
    .goalStatus {
        float: left;
        margin: 30px 0 40px 0;
        text-transform: uppercase;
    }
    .goalStatusText {
        font-weight: 800;
        text-transform: uppercase;
    }
}
.ahead {
    color: @green;
}
.behind {
    color: @red;
}
.on-track {
    color: @orange;
}
.dial {
    margin-right: 5px;
    position: relative;
    .channel-info {
        position: absolute;
        text-align: center;
        text-transform: uppercase;
        top: 50%;
        transform: translateY(-50%);
        width: 100%;
        .channel-name {
            font-size: 80%;
            font-weight: 800;
        }
        .channel-amount {
            font-size: 140%;
            font-weight: 500;
        }
        .channel-goal {
            font-size: 75%;
            font-weight: 500;
        }
        .channel-status {
            font-size: 100%;
            font-weight: 800;
        }
    }
}
.dial:last-child {
    margin-right: 0;
}
#revenue,
#earned-revenue {
    height: 675px;
}
.widget#earned-revenue {
    padding: 0;
    h2 {
        padding: 0 15px;
    }
}
/* ... */

